# grid_feedback_optimizer

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  test.yml  test_and_publish.yml
doc/: gp_result.json  gp_result_97bus.json  lv_97bus.ipynb  lv_97bus_time_varying.ipynb  optimization_results.json  pd_result.json  pd_result_97bus.json  simple_example.ipynb  simple_example_with_transformer.ipynb
docs/: requirements.txt
docs/source/: conf.py  grid_feedback_optimizer.engine.rst  grid_feedback_optimizer.models.rst  grid_feedback_optimizer.rst  grid_feedback_optimizer.utils.rst  index.rst  modules.rst
examples/: lv_97bus.xlsx  simple_example.json  simple_example_with_transformer.json  simple_example_with_transformer.xlsx
notebooks/: lv_97bus.ipynb  simple_example_with_transformer.ipynb
paper/: paper.bib  paper.md
scripts/: view_network.py
src/: README.md  main.py
src/grid_feedback_optimizer/: __init__.py  main.py
src/grid_feedback_optimizer/engine/: grad_proj_optimizer.py  optimization.py  powerflow.py  primal_dual_optimizer.py  renew_gen_projection.py  run_powerflow.py  solve.py
src/grid_feedback_optimizer/io/: writer.py
src/grid_feedback_optimizer/models/: loader.py  network.py  solve_data.py  solver_data.py  writer.py
src/grid_feedback_optimizer/utils/: utils.py
tests/: test_loader.py  test_main.py  test_optimization.py  test_powerflow.py  test_renew_gen_projection.py  test_solve.py  test_writer.py
tests/output/: simple_example.json  simple_example_with_transformer.json  test_writer.json
