[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_feedback_optimizer"
version = "0.1.3"
description = "Optimization methods for voltage and congestion management in modern power distribution grids."
readme = "README.md"
authors = [
  { name = "Sen Zhan", email = "sen.zhan@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
    "annotated-types>=0.7.0",
    "asttokens>=3.0.0,<4.0",
    "cffi>=2.0.0,<3.0",
    "clarabel>=0.11.1,<1.0",
    "click>=8.3.0,<9.0",
    "colorama>=0.4.6,<1.0",
    "comm>=0.2.3,<1.0",
    "contourpy>=1.3.3,<2.0",
    "cvxpy>=1.7.3,<2.0",
    "cycler>=0.12.1,<1.0",
    "decorator>=5.2.1,<6.0",
    "numpy>=2.3.3,<3.0",
    "pandas>=2.3.2,<3.0",
    "scipy>=1.16.2,<2.0",
    "matplotlib>=3.10.6,<4.0",
    "power-grid-model>=1.12.41,<2.0",
    "openpyxl>=3.1.5,<4.0",
    "osqp>=1.0.4,<2.0",
    "pydantic>=2.11.9,<3.0",
    "pydantic_core>=2.33.2,<3.0",
    "python-dateutil>=2.9.0,<3.0",
    "pytz>=2025.2,<2026.0",
    "tzdata>=2025.2,<2026.0",
]

[project.optional-dependencies]
# Development and testing
dev = [
  "pytest>=8.4.2,<9.0",
  "black",
  "flake8",
]

# Windows-specific dependencies
windows = ["pywin32>=311"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/senzhanopt/grid_feedback_optimizer"
Repository = "https://github.com/senzhanopt/grid_feedback_optimizer"
