[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_feedback_optimizer"
version = "0.1.12"
description = "Optimization methods for voltage and congestion management in modern power distribution grids."
readme = "README.md"
authors = [
  { name = "Sen Zhan", email = "sen.zhan@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"

# Runtime dependencies
dependencies = [
    "cvxpy>=1.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "power-grid-model>=1.12.60",
    "pydantic>=2.12.3",
]


[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/senzhanopt/grid_feedback_optimizer"
Repository = "https://github.com/senzhanopt/grid_feedback_optimizer"
